<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    tools:context=".RegisterActivity">

    <Button
        android:id="@+id/photo_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_photo_button"
        android:text="@string/select_photo_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_register"
        style="@style/whiteboxEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/username_hint"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_button_register" />

    <EditText
        android:id="@+id/email_edit_register"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/username_edit_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_edit_register"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_register" />

    <EditText
        android:id="@+id/password_edit_register"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/username_edit_register"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_register" />

    <EditText
        android:id="@+id/repassword_edit_register"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:layout_marginBottom="267dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_button_register"
        app:layout_constraintEnd_toEndOf="@+id/username_edit_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_edit_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_register"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/register_button_register"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:background="@drawable/rounded_button"
        android:text="@string/register_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/repassword_edit_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/repassword_edit_register"
        app:layout_constraintTop_toBottomOf="@+id/repassword_edit_register" />

    <Button
        android:id="@+id/already_have_an_account_button_login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:text="@string/already_have_an_account_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

</androidx.constraintlayout.widget.ConstraintLayout>