<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_layout"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/email_edit_login"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edit_login"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_login"
        app:layout_constraintStart_toStartOf="@+id/email_edit_login"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_login" />

    <Button
        android:id="@+id/login_button_login"
        style="@style/whiteboxEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_vertical_edit"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_login"
        app:layout_constraintStart_toStartOf="@+id/password_edit_login"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_login" />

    <Button
        android:id="@+id/new_user_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/new_user_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>
